--- a/package.json
+++ b/package.json
@@ -4,12 +4,34 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:prod": "npm run build && nodemon build/server.js",
+    "start:dev": "nodemon src/server.ts",
+    "deploy": "npm run build && serverless deploy",
+    "build": "rimraf ./build && tsc",
+    "format": "prettier \"./**\" --write --ignore-unknown"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^6.1.5",
+    "hpp": "^0.2.3",
+    "http-status-codes": "^2.2.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1"
   }
 }
