--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:prod": "npm run build && nodemon build/server.js",
-    "start:dev": "nodemon src/server.ts",
+    "start:prod": "npm run build && nodemon build/app.js",
+    "start:dev": "nodemon -r tsconfig-paths/register src/app.ts",
     "deploy": "npm run build && serverless deploy",
     "build": "rimraf ./build && tsc",
     "format": "prettier \"./**\" --write --ignore-unknown"
@@ -22,6 +22,7 @@
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
@@ -32,6 +33,8 @@
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1"
+    "@typescript-eslint/parser": "^5.59.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
