--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   },
