setup socketio connectino

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NODE_ENV=development
 SECRET_KEY_ONE=thisisasecretkey1
 SECRET_KEY_TWO=thisisasecretkey2
 CLIENT_URL=http://localhost:3000
+REDIS_HOST=redis://localhost:6379
