--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.1.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -25,6 +26,8 @@
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
+    "redis": "^4.6.6",
+    "socket.io": "^4.6.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
