--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,8 @@
 {
-  "printWidth": 120,
-  "singleQuote": true,
-  "arrowParens": "avoid",
-  "quoteProps": "as-needed",
-  "bracketSpacing": true,
-  "proseWrap": "never",
-  "endOfLine": "auto",
   "trailingComma": "none",
-  "overrides": [
-    {
-      "files": "*.yaml",
-      "options": {
-        "tadWidth": 2,
-        "printWidth": 40,
-        "singleQuote": true
-      }
-    }
-  ]
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "printWidth": 140
 }
