implement cloudinary function

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ SECRET_KEY_ONE=thisisasecretkey1
 SECRET_KEY_TWO=thisisasecretkey2
 CLIENT_URL=http://localhost:3000
 REDIS_HOST=redis://localhost:6379
+
+CLOUD_NAME=sajal-cnq
+CLOUD_API_KEY=572156839876236
+CLOUD_API_SECRET=dmlRwiT8jRZtCi0vT9Ik8RSqsK8
