--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.1.0",
     "bunyan": "^1.8.15",
+    "cloudinary": "^1.36.2",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
