--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "redis": "^4.6.6",
@@ -45,6 +47,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
