implement base quese init setup

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^5.1.2",
+    "@bull-board/ui": "^5.1.2",
     "@socket.io/redis-adapter": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.10.4",
     "bunyan": "^1.8.15",
     "cloudinary": "^1.36.2",
     "compression": "^1.7.4",
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.8",
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
