--- a/.env
+++ b/.env
@@ -10,3 +10,10 @@ REDIS_HOST=redis://localhost:6379
 CLOUD_NAME=sajal-cnq
 CLOUD_API_KEY=572156839876236
 CLOUD_API_SECRET=dmlRwiT8jRZtCi0vT9Ik8RSqsK8
+
+EMAIL=md.soharubhossen@gmail.com
+MAIL_PASSWORD=jzbqremfzvhnqnvx
+
+#Test Dev environment email
+SMTP_USER= 8b6d9ac7594e74
+SMTP_PASSWORD= a4d7b80183c4d5
