--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.1.5",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.1.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "redis": "^4.6.6",
     "socket.io": "^4.6.1",
@@ -53,6 +55,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
