--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.4",
     "bunyan": "^1.8.15",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.36.2",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "ip": "^1.1.8",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
@@ -53,6 +55,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
+    "@types/ip": "^1.1.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@types/nodemailer": "^6.4.7",
