implement unit test cases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "lib": ["DOM", "ES2015"],
     "baseUrl": ".",
     "outDir": "./build",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
@@ -16,7 +17,6 @@
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
-    "noUnusedParameters": false,
     "pretty": true,
     "resolveJsonModule": true,
     "plugins": [{
