install pm2 globally and update start command from package.json file

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_PASSWORD=3ymvbcwivRq1eSOF
 DATABASE_URL=mongodb://sohrab:3ymvbcwivRq1eSOF@ac-9cnkrjh-shard-00-00.vba8ve3.mongodb.net:27017,ac-9cnkrjh-shard-00-01.vba8ve3.mongodb.net:27017,ac-9cnkrjh-shard-00-02.vba8ve3.mongodb.net:27017/?ssl=true&replicaSet=atlas-d7ewo6-shard-0&authSource=admin&retryWrites=true&w=majority
 JWT_TOKEN=t1nzeite34
-NODE_ENV=development
+NODE_ENV=production
 SECRET_KEY_ONE=thisisasecretkey1
 SECRET_KEY_TWO=thisisasecretkey2
 CLIENT_URL=http://localhost:3000
